add get customers routes
